--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Python-generated files
 __pycache__/
-*.py[oc]
+*.py[ocd]
 build/
 dist/
 wheels/
@@ -8,3 +8,12 @@ wheels/
 
 # Virtual environments
 .venv
+
+# django files
+*.log
+*.pot
+*.db
+*.sqlite3
+local_settings.py
+/static
+/media
